[package]
name = "rbx_mesh"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/krakow10/rbx_mesh"
license = "MIT OR Apache-2.0"
description = "Rust parser for Roblox mesh files."
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
exclude = ["meshes"]
keywords = ["roblox", "mesh", "parser", "decoder", "union"]

[features]
default = [
	"mesh",
	"union-graphics",
	"union-physics",
	"mesh-v1",
]
mesh = ["dep:regex"]
union-graphics = []
union-physics = []

# mesh v1 is rare and depends on regex
mesh-v1 = ["mesh"]

[dependencies]
binrw = "0.15.0"
regex = { version = "1.11.3", default-features = false, optional = true }
