[package]
name = "rbx_mesh"
version = "0.7.0"
edition = "2024"
repository = "https://github.com/krakow10/rbx_mesh"
license = "MIT OR Apache-2.0"
description = "Rust parser for Roblox mesh files."
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
exclude = ["meshes", "src/test/snapshots"]
keywords = ["roblox", "mesh", "parser", "decoder", "union"]

[features]
default = [
	"mesh",
	"union-graphics",
	"union-physics",
	"mesh-v1",
	"csgphs-v8-zstd",
]
mesh = []
union-graphics = []
union-physics = []

# mesh v1 is rare and depends on regex
mesh-v1 = ["mesh", "dep:regex"]
# union physics v8 depends on zstd, pick your poison
csgphs-v8-zstd = ["union-physics", "dep:zstd"] # non-rust dependency
csgphs-v8-ruzstd = ["union-physics", "dep:ruzstd"] # 3.5x slower than zstd

[dependencies]
binrw = "0.15.0"
regex = { version = "1.11.3", default-features = false, optional = true }
ruzstd = { version = "0.8.2", default-features = false, optional = true, features = ["std"] }
zstd = { version = "0.13.3", default-features = false, optional = true }

[dev-dependencies]
insta = "1.47.2"
